<?xml version="1.0"?>
<package format="2">
    <name>iarc_mission_nine</name>
    <version>0.0.0</version>
    <description>The iarc_mission_nine package</description>

    <maintainer email="ashwins@iitk.ac.in">Ashwin Shenai</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>mavros_msgs</depend>

    <depend>iarc_simulation_tools</depend>

    <depend>dubins_trajectory_generator</depend>
    <depend>mast_finder</depend>

    <depend>plate_detector</depend>
    <depend>led_detector</depend>
    <depend>feature_detection</depend>
    <depend>pose_estimator</depend>
    <depend>detector_msgs</depend>

</package>
