<?xml version="1.0"?>
<package format="2">
    <name>carrier_state_machine</name>
    <version>0.0.0</version>
    <description>The carrier_state_machine package</description>

    <maintainer email="ashwins@iitk.ac.in">Ashwin Shenai</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>mavros_msgs</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>rosplane</depend>
    <depend>rosplane_sim</depend>

    <depend>state_machine_definition</depend>

    <depend>dubins_trajectory_generator</depend>

</package>
